Compress html and css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700">
-  <!-- <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/style.css"> -->
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/main.css">
+
+  <!-- Inline CSS here -->
+  <style type="text/css">
+  {% capture inline_css %}
+    {% include inline.scss %}
+  {% endcapture %}
+  {{ inline_css | scssify }}
+  </style>
 
   <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.ico">
