Have bulma sass; Extend CV-ish a little

--- a/_includes/inline.scss
+++ b/_includes/inline.scss
@@ -1,3 +1,10 @@
 @import "syntax";
 
+$section-padding:  2rem 1rem;
+$navbar-background-color: #f5f5f5;
+
+
+@import "bulma";
+@import "timeline";
+
 @import "main";
