--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
         <a class="navbar-item" href="{{site.url}}/about">
           About
         </a>
-        <a class="navbar-item" href="https://github.com/tammoippen"><i class="fa fa-github" aria-hidden="true" alt="Github"></i></a>
+        <a class="navbar-item" href="https://github.com/tammoippen"><i class="fab fa-github" aria-hidden="true" alt="Github"></i></a>
       </div>
     </div>
   </div>
