--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@ layout: default
       | {{ post.category }}
     {% endif %}
     | {{ post.date | date: "%b %-d, %Y" }}
-    <p>{{post.excerpt}}</p>
+    {{post.excerpt}}
 
   </div>
 </section>
