--- a/_includes/inline.scss
+++ b/_includes/inline.scss
@@ -2,6 +2,9 @@
 
 $section-padding:  2rem 1rem;
 $navbar-background-color: #f5f5f5;
+$desktop: 672px;
+$widescreen: 768px;
+$fullhd: 864px;
 
 
 @import "bulma";
